app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
  namespace: node-app
  labels:
    app: node-app
spec:
  ports:
  - port: 3000 
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: node-app
